Fixes overflow issue with profile name in current profile popover in pipeline detail

--- a/cdap-ui/app/cdap/components/Cloud/Profiles/Preview/Preview.scss
+++ b/cdap-ui/app/cdap/components/Cloud/Profiles/Preview/Preview.scss
@@ -24,6 +24,15 @@ $disabled-color: $red-02;
   width: inherit;
   padding: 20px;
 
+  .profile-label {
+    & > strong {
+      display: block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+
   .profile-descripion {
     margin-bottom: 20px;
     font-size: 12px;
